[tool.poetry]
name = "firstapi"
version = "0.1.0"
description = ""
authors = ["Initialwave"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
fastapi-cli = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
